syntax = "proto3";

package auth;

message Token {
    string AccessToken = 1;
    string IDToken = 2;
    string RefreshToken = 3;
    string ExpiresAt = 4;
}

// AuthTokenRevoker
service AuthTokenRevoker {
    // Revoker invalidates the current token and specifies if the invalidation is due to a refresh or a revokation
    rpc Revoke (RevokeTokenRequest) returns (RevokeTokenResponse) {};

    // PruneTokens clear revoked tokens
    rpc PruneTokens (PruneTokensRequest) returns (PruneTokensResponse) {};
}

message RevokeTokenRequest {
    Token Token = 1;
}

message RevokeTokenResponse {
    bool Success = 1;
}

message PruneTokensRequest {

}

message PruneTokensResponse {
    repeated string tokens = 1;
}

service LoginProvider {
    rpc GetLogin    (GetLoginRequest) returns (GetLoginResponse) {};
    rpc CreateLogin (CreateLoginRequest) returns (CreateLoginResponse) {};
    rpc AcceptLogin (AcceptLoginRequest) returns (AcceptLoginResponse) {};
}

message ID {
    string Challenge = 1;
    string Verifier = 2;
    string CSRF = 3;
}

message GetLoginRequest {
    string Challenge = 1;
}

message GetLoginResponse {
    string Challenge = 1;
    string Subject = 2;
    string SessionID = 3;
    string RequestURL = 4;
    repeated string RequestedScope = 5;
    repeated string RequestedAudience = 6;
    string ClientID = 7;
}

message CreateLoginRequest {
    string ClientID = 1;
    repeated string Scopes = 2;
    repeated string Audiences = 3;
}

message CreateLoginResponse {
    ID Login = 1;
}

message AcceptLoginRequest {
    string Challenge = 1;
    string Verifier = 2;
    string Subject = 3;
}

message AcceptLoginResponse {}

service ConsentProvider {
    rpc GetConsent    (GetConsentRequest) returns (GetConsentResponse) {};
    rpc CreateConsent (CreateConsentRequest) returns (CreateConsentResponse) {};
    rpc AcceptConsent (AcceptConsentRequest) returns (AcceptConsentResponse) {};
}

message GetConsentRequest {
    string Challenge = 1;
}

message GetConsentResponse {
    string Challenge = 1;
    string LoginSessionID = 2;
    string SubjectIdentifier = 3;
    string Subject = 4;
    string ClientID = 5;
}

message CreateConsentRequest {
    string LoginChallenge = 1;
}

message CreateConsentResponse {
    ID Consent = 1;
}

message AcceptConsentRequest {
    string Challenge = 1;
    repeated string Scopes = 2;
    repeated string Audiences = 3;
    map<string,string> AccessToken = 4;
    map<string,string> IDToken = 5;
}

message AcceptConsentResponse {
}

service LogoutProvider {
    rpc CreateLogout (CreateLogoutRequest) returns (CreateLogoutResponse) {};
    rpc AcceptLogout (AcceptLogoutRequest) returns (AcceptLogoutResponse) {};
}

message CreateLogoutRequest {
    string RequestURL = 1;
    string Subject = 2;
    string SessionID = 3;
}

message CreateLogoutResponse {
    ID Logout = 1;
}

message AcceptLogoutRequest {
    string Challenge = 1;
    string AccessToken = 2;
    string RefreshToken = 3;
}

message AcceptLogoutResponse {
}

service AuthCodeProvider {
    rpc CreateAuthCode (CreateAuthCodeRequest) returns (CreateAuthCodeResponse) {};
}

message CreateAuthCodeRequest {
    ID Consent = 1;
    string ClientID = 2;
    string RedirectURI = 3;
}

message CreateAuthCodeResponse {
    string Code = 1;
}

// AuthTokenVerifier
service AuthTokenVerifier {
    // Verifies a token and returns claims
    rpc Verify (VerifyTokenRequest) returns (VerifyTokenResponse) {};
}

message VerifyTokenRequest {
    string Token = 1;
}

message VerifyTokenResponse {
    bool Success = 1;
    bytes Data = 2;
}

service AuthCodeExchanger {
    rpc Exchange(ExchangeRequest) returns (ExchangeResponse) {};
}

message ExchangeRequest {
    string Code = 1 [json_name="code"];
    string CodeVerifier = 2 [json_name="code_verifier"];
}

message ExchangeResponse {
    string AccessToken = 1 [json_name="access_token"];
    string IDToken = 2 [json_name="id_token"];
    string RefreshToken = 3 [json_name="refresh_token"];
    int64 Expiry = 4 [json_name="expiry"];
}

service AuthTokenRefresher {
    rpc Refresh(RefreshTokenRequest) returns (RefreshTokenResponse) {};
}

message RefreshTokenRequest {
    string RefreshToken = 1;
}

message RefreshTokenResponse {
    string AccessToken = 1 [json_name="access_token"];
    string IDToken = 2 [json_name="id_token"];
    string RefreshToken = 3 [json_name="refresh_token"];
    int64 Expiry = 4 [json_name="expiry"];
}